--- a/main.html
+++ b/main.html
@@ -14,14 +14,14 @@
       <div role="document" class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
+            <button type="button" data-dismiss="modal" aria-label="Close" class="close target"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">親モーダルダイアログ</h4>
           </div>
-          <div class="modal-body"><a href="#" data-toggle="modal" data-target="#child" class="btn btn-default">子モーダル表示</a>
+          <div class="modal-body"><a href="#" data-toggle="modal" data-target="#child" class="btn btn-default target">子モーダル表示</a>
             <div style="height: 500px;">高さがあるモーダル</div>
           </div>
           <div class="modal-footer">
-            <button type="button" data-dismiss="modal" class="btn btn-default">閉じる</button>
+            <button type="button" data-dismiss="modal" class="btn btn-default target">閉じる</button>
           </div>
         </div>
       </div>
@@ -46,10 +46,54 @@
     </div>
     <div tabindex="0"></div>
     <script>
+    $.fn.tabChain = function(option) {
+       option = $.extend({},{onReadyFocus:false},option);
+
+       var chains = [];
+
+       var init = function(){
+           var first = chains[0];
+           var last = chains[chains.length-1];
+           console.log(chains);;
+           for(el in chains){
+               $(chains[el]).keydown(function(event){
+
+                   if (event.keyCode !== 9) {
+                       return;
+                   }
+                   if (event.target === last && !event.shiftKey) {
+                       first.focus();
+                       console.log('islast');
+                       console.log(first);
+                       return false;
+                   }
+                   else if (event.target === first && event.shiftKey) {
+                       last.focus();
+                       console.log('isFirst');
+                       return false;
+                   }
+               })
+           }
+           if(option.onReadyFocus == true){
+               first.focus();
+           }
+
+       }
+
+       this.each(function(){
+           chains.push(this);
+       })
+
+       init();
+   };
       $('#child').on('click', function () {
         $('body').addClass('modal-open');
-        $('document').off('')
+        const target = $('.target')
+        target.tabChain()
       });
+      $('#child').on('hidden.bs.modal', function () {
+    $('body').addClass('modal-open');
+  });
     </script>
   </body>
 </html>
